# jellyfinCleaner

./: CHANGELOG.md  README.md  jellyfin_cleanup.py  pyproject.toml
.github/workflows/: ci.yml
INSTALLATION/: INSTALLATION.md
jellyfin_cleanup/: __init__.py  __main__.py  cli.py  client.py  core.py  database.py
tests/: test_cli.py  test_connectivity.py  test_db.py  test_delete_resilience.py
